fix: change header measurement due to horizontal scrolling.

--- a/styles/main.css
+++ b/styles/main.css
@@ -31,7 +31,7 @@ body {
 }
 
 header {
-  width: 100vw;
+  width: 100%;
   padding: 0.5vh 0.5vw 0.5vh 0.5vw;
   box-sizing: border-box;
   outline: var(--second-colour) 3px solid;
